 
[package]
name = "huggingWASMface"
version = "0.1.1"
authors = ["neil larion"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokenizers = { version="*", path = "/home/nlarion/Desktop/tokenizers/tokenizers" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]